# baas-cpp-dev

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  resources.lock.json
.github/workflows/: android-ocr-foundation.yml  baas_afwc.yaml  baas_app.yaml  baas_ocr.yaml  foundation-runtime.yml  httplib-http.yml  runtime-repository-git2.yml  service-application.yml  service-auth.yml  webui-service-supervisor.yml
apps/BAAS/: CMakeLists.txt
apps/BAAS/cmake/: Linux.cmake  MacOS.cmake  RuntimeResources.cmake  Windows.cmake
apps/BAAS/src/module/auto_fight/: auto_fight.cpp
apps/BAAS_auto_fight_workflow_checker/: CMakeLists.txt  main.cpp
apps/BAAS_runtime_repository_update/: main.cpp
apps/BAAS_service/: main.cpp
apps/ISA/: CMakeLists.txt
apps/ISA/cmake/: RuntimeResources.cmake
apps/ISA/src/: utils.cpp
apps/baas-runtime-publisher/: main.cpp
apps/ocr_server/: CMakeLists.txt  README.md  native-lib.cpp
apps/script_check/: main.cpp
apps/script_run/: main.cpp
cmake/: BAASConanRuntime.cmake  BAASDependency.cmake  BAASResources.cmake  BAASTarget.cmake  LegacyProcedureDefinitionValidation.cmake  LegacyProcedureExecution.cmake  NmsBenchmark.cmake  ResourceCore.cmake  RuntimeBAASConnectionCoDetectPort.cmake  RuntimeCoDetectDefinitionModel.cmake  RuntimeCoDetectExecutor.cmake  RuntimeCoDetectProductionAdapter.cmake  RuntimeCoDetectSupportBundle.cmake  RuntimeGroupPublicationCompiler.cmake  RuntimeProcedureActivation.cmake  RuntimeRepository.cmake  RuntimeRepositoryGit2.cmake  RuntimeRepositoryUpdater.cmake  RuntimeResourceSnapshotLoader.cmake  RuntimeScriptCatalog.cmake  RuntimeScriptExecutionPlan.cmake  RuntimeScriptPackageLoader.cmake  RuntimeStrictJson.cmake  SchedulerPolicy.cmake  ScriptConfigHost.cmake  ScriptHostRuntimeComposition.cmake  ScriptProcedureHost.cmake  ScriptProcedureSnapshot.cmake  ScriptResourceHost.cmake  ScriptRuntime.cmake  ServiceAdbDiscoveryTrigger.cmake  ServiceAdbSync.cmake  ServiceAdbTransport.cmake  ServiceApplication.cmake  ServiceAuth.cmake  ServiceAuthHttp.cmake  ServiceBusinessPipeChannel.cmake  ServiceBusinessSession.cmake  ServiceCommandLine.cmake  ServiceConfigurationTriggers.cmake  (+38 more)
deploy/conan/: README.md  conanfile.py
docs/: DEVELOPMENT_ENVIRONMENT.md  conan-migration-gaps.md  conan-private-recipes-migration.md
docs/scheduler/: SCHEDULER_POLICY.md
docs/script-runtime/: ADR-0001-runtime-architecture.md  ADR-0002-vm-memory-management.md  ADR-0003-privileged-operation-boundaries.md  ADR-0004-core-runtime-boundary.md  ASYNC_TASKS.md  BASELINE_AUDIT.md  CONFIG_HOST.md  CONFORMANCE_RUNNER.md  CONTROL_FLOW_AND_MODULES.md  CO_DETECT_PYTHON_COMPAT_ENGINE.md  ERRORS_AND_CLEANUP.md  GROUP_RESOURCE_PUBLICATION.md  HOST_CAPABILITY_CONTRACTS.md  HOST_RUNTIME_COMPOSITION.md  LANGUAGE_GRAMMAR.md  LANGUAGE_SPEC_DRAFT.md  LEGACY_PROCEDURE_EXECUTION.md  LOG_HOST.md  MIGRATION_MATRIX.md  OPERATION_INDEX_AUDIT.md  PACKAGE_VERSIONING.md  PLATFORM_SMOKE_PREREQUISITES.md  PROCEDURE_HOST.md  PYTHON_AUTOMATION_MIGRATION_PLAN.md  PYTHON_GOLDEN_TRACES.md  PYTHON_SERVICE_PERFORMANCE_BASELINE.md  ROADMAP.md  RUNTIME_PROCEDURE_ACTIVATION.md  RUNTIME_REPOSITORIES.md  RUNTIME_REPOSITORY_GIT2_DEPENDENCY.md  RUNTIME_REPOSITORY_UPDATE_APPLICATION.md  RUNTIME_RESOURCE_SNAPSHOT_LOADER.md  RUNTIME_SCRIPT_CATALOG.md  RUNTIME_SCRIPT_EXECUTION_PLAN.md  RUNTIME_SCRIPT_PACKAGE_LOADER.md  SERVICE_ADB_DISCOVERY_TRIGGER.md  SERVICE_ADB_SYNC.md  SERVICE_ADB_TRANSPORT.md  SERVICE_APPLICATION.md  SERVICE_AUTH_CRYPTO.md  (+39 more)
include/: BAAS.h  BAASGlobals.h
include/config/: BAASConfig.h
include/device/: ExactBackendLifetime.h
include/procedure/: AppearThenClickProcedure.h  BaseProcedure.h  LegacyProcedureDefinitionValidation.h  LegacyProcedureExecution.h
include/resources/: ResourceSnapshot.h
include/scheduler/: SchedulerPolicy.h
include/script/: Ast.h  Diagnostic.h  Lexer.h  Parser.h  SemanticAnalyzer.h  SourceLocation.h  SyntaxCheck.h  Token.h
scripts/: fetch_resources.py
scripts/dev/: Build-AndroidOcr.ps1  Enter-WindowsDevShell.ps1  Initialize-WindowsEnvironment.ps1  requirements-foundation.txt
scripts/migration/: README.md  __init__.py  capture_python_golden_traces.py  measure_python_baseline.py  measure_python_service_baseline.py  operation_index.py  operation_rules.v1.json  operation_rules.v2.json  operation_rules.v3.json  operation_rules.v4.json  operation_rules.v5.json  validate.py
scripts/platform/: check_smoke_prerequisites.py
scripts/service_contract/: generate_vectors.py
src/: BAAS.cpp  BAASGlobals.cpp
src/ocr/: BAASOCR.cpp  CrnnNet.cpp
src/procedure/: AppearThenClickProcedure.cpp  BaseProcedure.cpp  LegacyProcedureDefinitionValidation.cpp  LegacyProcedureExecution.cpp
src/resources/: ResourceSnapshot.cpp
src/scheduler/: SchedulerPolicy.cpp
src/script/: Lexer.cpp  Parser.cpp  SemanticAnalyzer.cpp  SyntaxCheck.cpp  Token.cpp
src/yolo/: BAAS_yolo.cpp
tests/conan/baas-opencv-sibling-scope/left/: CMakeLists.txt
tests/conan/baas-opencv-sibling-scope/right/: CMakeLists.txt
tests/docs/: test_async_tasks_spec.py  test_baas_app_ci.py  test_co_detect_python_compat_engine.py  test_conformance_runner.py  test_control_modules_spec.py  test_errors_cleanup_spec.py  test_external_resource_boundary.py  test_group_resource_publication.py  test_host_capability_contracts.py  test_host_registry_foundation.py  test_httplib_upgrade.py  test_legacy_conan_workflows.py  test_legacy_procedure_execution.py  test_libgit2_dependency.py  test_log_host_foundation.py  test_miniz_dependency.py  test_procedure_host_foundation.py  test_python_automation_migration_plan.py  test_runtime_procedure_activation.py  test_runtime_resource_snapshot_loader.py  test_runtime_script_catalog.py  test_runtime_script_execution_plan.py  test_runtime_script_package_loader.py  test_scheduler_policy.py  test_service_adb_discovery_trigger.py  test_service_adb_sync.py  test_service_adb_transport.py  test_service_application.py  test_service_business_pipe_channel.py  test_service_command_line.py  test_service_configuration_triggers.py  test_service_pipe_host.py  (+15 more)
(+478 files in other folders)
